@@ -80,73 +80,9 @@
         </plugins>
       </build>
     </profile>
-    <profile>
-      <id>run-chp02</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>exec-maven-plugin</artifactId>
-            <version>1.1</version>
-            <executions>
-              <execution>
-                <phase>install</phase>
-                <goals>
-                  <goal>java</goal>
-                </goals>
-                <configuration>
-                  <mainClass>org.etk.sandbox.security.jaas.ch02.Chp02Main</mainClass>
-                  <arguments>
-                    <argument>-Djava.security.manager</argument>
-                    <argument>-Djava.security.debug=all</argument>
-                    <argument>-Djava.security.policy=${project.build.outputDirectory}/classes/conf/chp02.policy</argument>
-                    <argument>-Djava.security.auth.login.config=${project.build.outputDirectory}/classes/conf/chp02-loginmodules.properties</argument>
-                  </arguments>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
+    
   </profiles>
 
-  <build>
-    <plugins>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>test-jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>attach-sources1</id>
-            <goals>
-              <goal>jar-no-fork</goal>
-            </goals>
-            <phase>compile</phase>
-          </execution>
-          <execution>
-            <id>attach-sources2</id>
-            <goals>
-              <goal>test-jar-no-fork</goal>
-            </goals>
-            <phase>test-compile</phase>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
+  
 
 </project>
